fixes to alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,7 @@ a#email.nav-link:hover, a#github.nav-link:hover, a#linkedin.nav-link:hover {
   background-color: $secondarylightcolor;
 }
 
-.masthead {
+.masthead, .tech-page {
   height: 100vh;
   min-height: 500px;
   background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
@@ -90,6 +90,12 @@ a#email.nav-link:hover, a#github.nav-link:hover, a#linkedin.nav-link:hover {
   margin-top: 5%;
 }
 
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  color: $mainfontcolor
+}
+
 .card-img-left {
   height: 60rem;
   width: 20rem;
@@ -125,20 +131,6 @@ a#email.nav-link:hover, a#github.nav-link:hover, a#linkedin.nav-link:hover {
     margin-right: auto;
     width: 100%;
     height: 100%;
-}
-
-.tech-page {
-  height: 100vh;
-  min-height: 500px;
-  background-image: url('https://github.com/hmparsons-sde/portfolio-site/blob/main/src/images/Portfolio%20Mock-up%20(4).png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 1.25em;
-  color: $mainfontcolor;
 }
 
 /* For mobile phones: */
